[package]
name = "volatility-surface"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
delaunator = "1.0.2"
futures-util = "0.3.31"
kiss3d = "0.35.0"
ordered-float = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
three-d = "0.18.2"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tungstenite = "0.27.0"
url = "2.5.4"
